feat: 30 - add widget endpoint
